# StereoDisparityApp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  imageprocessor.cpp  imageprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
